--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  oslo.i18n-6.5.0.tar.gz: 51cd40fd549160bdc8b12cb333e49df3e63ef850
+  oslo_i18n-6.7.1.tar.gz: 73584328c8e6a1b3227f6f117bfff92048b35acd
